# AP

./: CMakeCache.txt  CMakeLists.txt  Makefile  Model  ModelGraph  Target  TargetGraph  cmake_install.cmake  pcd_test
test/: 1.pcd  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  correspondence_grouping.cpp  go.cpp  go.pcd  pcd_cor  pcd_cor.cpp  pcd_ply  pcd_rec  pcd_rec.cpp  pcd_recognition  pcd_recognition.cpp  pcd_register.cpp  pcd_test  result.pcd  screenshot-1511202886.cam  screenshot-1511281813.cam  screenshot-1511283050.cam  screenshot-1511284030.cam  screenshot-1512396468.cam  screenshot-1512397248.cam  screenshot-1512489780.cam  screenshot-1512489799.cam  screenshot-1512489862.cam  screenshot-1512489867.cam
test/big_scenes_proc/: fifth_scan_mushroom.pcd  fifth_scan_standard.pcd  first_scan_mushroom.pcd  first_scan_standard.pcd  second_scan_standard.pcd
test/include/: CloudFilter.hpp  Segmentor.hpp
test/new_models_2/: elongated_bulb_down.pcd  first_scan_4.pcd  first_scan_down_1.pcd  fourth_scan_down_modern.pcd  fourth_scan_down_mushroom.pcd  mushroom_bulb_down.pcd  second_scan.pcd  third_scan.pcd  third_scan_1.pcd  third_scan_4.pcd  third_scan_down_standard.pcd
test/new_scenes_filtered_single/: fifth_scan.pcd  first_scan.pcd  fourth_scan.pcd  third_scan.pcd
test/scans/: screenshot-1511281383.cam  screenshot-1511281550.cam  screenshot-1511281561.cam  screenshot-1511281574.cam
test/scenes_filtered_single/: conveyor_cup.pcd  first_scan.pcd  fourth_scan.pcd  second_scan.pcd  third_scan.pcd  up.pcd
test/src/: compute_rsd.cpp  pcd_ply.cpp  pcd_recognition.cpp
test/standalone_models_filtered/: filtered_elongated_bulb_vfh.pcd  filtered_standard_bulb_vfh.pcd
test_pcl/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compute_vfh  kdtree.idx  nearest_neighbors  screenshot-1512488908.cam  screenshot-1512488921.cam  screenshot-1512488977.cam  screenshot-1512488998.cam  screenshot-1512489063.cam  training_data.h5  training_data.list
test_pcl/big_models/: elongated_down.pcd  elongated_down_vfh.pcd  mushroom_down.pcd  mushroom_down_vfh.pcd  standard_down.pcd  standard_down_vfh.pcd
test_pcl/big_scenes/: fifth_scan_mushroom_vfh.pcd  fifth_scan_standard_vfh.pcd  first_scan_elongated.pcd  first_scan_elongated_vfh.pcd  fourth_scan_elongated.pcd  (+10 more)
(+117 files in other folders)
